tests/test/tests/ui/fail-syntax/http_invalid_syntax.stderr
error: Failed to create HTTP source: Missing required parameter: url
 --> tests/ui/fail-syntax/http_invalid_syntax.rs:6:1
  |
6 | #[cite(http, selector = "h1", reason = "test reason")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cite` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `test_missing_url` in this scope
  --> tests/ui/fail-syntax/http_invalid_syntax.rs:12:2
   |
12 |     test_missing_url();
   |     ^^^^^^^^^^^^^^^^ not found in this scope
